hw08-mongodb-library - исправлена миграция Mongock, Book и Genre в MongoDb